--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -14,7 +14,9 @@ var fnAdjustGalleryAreaWidth = function() {
 }
 
 $(document).ready(fnAdjustGalleryAreaWidth);
+</script>
 
+<script type="text/javascript">
 var fnAdjustGalleryWrapperWidth = function() {
     var galleryWidth = parseInt($('div.gallery').css('width'));
     var portraitWidth = parseInt($('div.gallery .portrait').css('width'));
@@ -98,18 +100,22 @@ var fnToggleGalleryArrowOpacity = function () {
         var imgs = $(event.target).find ('~.imgs');
 
         if (event.type != 'mouseenter') {
-            $(event.target).css('opacity','0.0625');
+            $(event.target).css ('background-color','transparent');
+            $(event.target).css ('opacity','0.0625');
         } else {
             if (imgs[0].offsetWidth > area[0].offsetWidth) {
-                $(event.target).css('opacity','1.0000');
+                $(event.target).css ('background-color','highlight');
+                $(event.target).css ('opacity','1.0000');
             } else {
                 var left = parseInt (imgs.css ('left'));
                 if ((left < 0.0) || (left > parseInt (area.css('width')) -
                     parseInt (imgs.css ('width')))) {
-                    $(event.target).css('opacity','1.0000');
+                    $(event.target).css ('background-color','highlight');
+                    $(event.target).css ('opacity','1.0000');
                 } else {
-                    $(event.target).css('opacity','0.0625');
-                    $(event.target).css('cursor','default');
+                    $(event.target).css ('background-color','transparent');
+                    $(event.target).css ('opacity','0.0625');
+                    $(event.target).css ('cursor','default');
                 }
             }
         }
@@ -122,7 +128,7 @@ $(document).ready (fnToggleGalleryArrowOpacity);
 </script>
 
 <script type="text/javascript">
-var fnSetGalleryArrowOnClick = function () {
+var fnSetGalleryArrowOnClickHandler = function () {
     $('div.gallery .arrow.rhs').unbind ('click');
     $('div.gallery .arrow.rhs').click (function (event) {
         var area = $(event.target).parent ('.area');
@@ -158,14 +164,14 @@ var fnSetGalleryArrowOnClick = function () {
     });
 };
 
-$(document).ready (fnSetGalleryArrowOnClick);
+$(document).ready (fnSetGalleryArrowOnClickHandler);
 </script>
 
 <script type="text/javascript">
 $(window).resize (function () {
     fnAdjustGalleryAreaWidth ();
     fnAdjustGalleryWrapperWidth ();
-    fnSetGalleryArrowOnClick ();
+    fnSetGalleryArrowOnClickHandler ();
 });</script>
 {% endblock %}
 
@@ -179,7 +185,9 @@ $(window).resize (function () {
 {% block content %}<div id="content">    
     <div class="gallery">
         <div class="gallery-v-spacer">&nbsp;</div>
-        <div class="portrait red"></div>
+        <div class="portrait">
+            <div class="frame"></div>
+        </div>
         <div class="gallery-v-spacer">&nbsp;</div>
         <div class="label blue">
             <ul>
@@ -200,12 +208,40 @@ $(window).resize (function () {
                 <div class="arrow lhs"></div>
                 <div class="arrow rhs"></div>
                 <ul class="imgs">
-                    <li><div class="img">&alpha;</div></li>
-                    <li><div class="img">&beta;</div></li>
-                    <li><div class="img">&gamma;</div></li>
-                    <li><div class="img">&delta;</div></li>
-                    <li><div class="img">&epsilon;</div></li>
-                    <li><div class="img">&zeta;</div></li>
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&alpha;</div>
+                            <div class="img-footer blue"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&beta;</div>
+                            <div class="img-footer blue"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&gamma;</div>
+                            <div class="img-footer blue"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&delta;</div>
+                            <div class="img-footer blue"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&epsilon;</div>
+                            <div class="img-footer blue"></div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -219,7 +255,9 @@ $(window).resize (function () {
     
     <div class="gallery">
         <div class="gallery-v-spacer">&nbsp;</div>
-        <div class="portrait"></div>
+        <div class="portrait">
+            <div class="frame"></div>
+        </div>
         <div class="gallery-v-spacer">&nbsp;</div>
         <div class="label red">
             <ul>
@@ -243,15 +281,40 @@ $(window).resize (function () {
                 <div class="arrow lhs"></div>
                 <div class="arrow rhs"></div>
                 <ul class="imgs">
-                    <li><div class="img">&alpha;</div></li>
-                    <li><div class="img">&beta;</div></li>
-                    <li><div class="img">&gamma;</div></li>
-                    <li><div class="img">&delta;</div></li>
-                    <li><div class="img">&epsilon;</div></li>
-                    <li><div class="img">&zeta;</div></li>
-                    <li><div class="img">&eta;</div></li>
-                    <li><div class="img">&theta;</div></li>
-                    <li><div class="img">&iota;</div></li>
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&alpha;</div>
+                            <div class="img-footer red"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&beta;</div>
+                            <div class="img-footer red"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&gamma;</div>
+                            <div class="img-footer red"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&delta;</div>
+                            <div class="img-footer red"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&epsilon;</div>
+                            <div class="img-footer red"></div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -265,7 +328,9 @@ $(window).resize (function () {
 
     <div class="gallery">
         <div class="gallery-v-spacer">&nbsp;</div>
-        <div class="portrait"></div>
+        <div class="portrait">
+            <div class="frame"></div>
+        </div>
         <div class="gallery-v-spacer">&nbsp;</div>
         <div class="label green">
             <ul>
@@ -290,10 +355,40 @@ $(window).resize (function () {
                 <div class="arrow lhs"></div>
                 <div class="arrow rhs"></div>
                 <ul class="imgs">
-                    <li><div class="img">&alpha;</div></li>
-                    <li><div class="img">&beta;</div></li>
-                    <li><div class="img">&gamma;</div></li>
-                    <li><div class="img">&delta;</div></li>
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&alpha;</div>
+                            <div class="img-footer green"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&beta;</div>
+                            <div class="img-footer green"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&gamma;</div>
+                            <div class="img-footer green"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&delta;</div>
+                            <div class="img-footer green"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="img">
+                            <div class="img-content">&epsilon;</div>
+                            <div class="img-footer green"></div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
