--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -106,5 +106,8 @@
         <p>&copy; 2010 &ndash; All Rights Reserved.</p>
     </div>{% endblock %}
 
+    {% block image-cache %}<div id="image-cache">
+    </div>{% endblock %}
+
 {% endblock %}</body>
 {% endblock %}</html>
