--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -196,7 +196,7 @@ body {
 }
 
 /* -------------------------------------------------------------------------
- * Gallery
+ * Gallery:
  * ------------------------------------------------------------------------- */
 
 div.gallery {
@@ -204,6 +204,10 @@ div.gallery {
     width: 100%;
     background-color: #0f243f;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Portrait
+ * ------------------------------------------------------------------------- */
 
 div.gallery .portrait {
     float: left;
@@ -217,6 +221,10 @@ div.gallery .portrait .frame {
     border: 1px dotted white;
     background-color: #808080;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Label
+ * ------------------------------------------------------------------------- */
 
 div.gallery .label {
     float: left;
@@ -261,11 +269,19 @@ div.gallery .label.blue {
     background-color: #68697e;
 }
 
+/* -------------------------------------------------------------------------
+ * Gallery: Wrapper
+ * ------------------------------------------------------------------------- */
+
 div.gallery .wrapper {
     float: left;
     height: 100%;
     width: 640px;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Arrow
+ * ------------------------------------------------------------------------- */
 
 div.gallery .arrow {
     top: 65px;
@@ -304,11 +320,19 @@ div.gallery .arrow.rhs {
     -moz-border-radius-bottomleft: 3px;
 }
 
+/* -------------------------------------------------------------------------
+ * Gallery: Area
+ * ------------------------------------------------------------------------- */
+
 div.gallery .area {
     height: 100%;
     width: 100%;
     position: relative;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Images
+ * ------------------------------------------------------------------------- */
 
 div.gallery .imgs {
     margin: 0;
@@ -324,6 +348,10 @@ div.gallery .imgs li {
     float: left;
 }
 
+/* -------------------------------------------------------------------------
+ * Gallery: Image
+ * ------------------------------------------------------------------------- */
+
 div.gallery .img {
     border-right: 1px solid white;
     background-color: #808080;
@@ -337,6 +365,10 @@ div.gallery .img {
     color: white;
 }
 
+/* -------------------------------------------------------------------------
+ * Gallery: Image Content
+ * ------------------------------------------------------------------------- */
+
 div.gallery .img .content {
     height: 155px;
     width: 248px;
@@ -347,6 +379,10 @@ div.gallery .img .content {
     display: table-cell;
     vertical-align: middle;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Image Footer
+ * ------------------------------------------------------------------------- */
 
 div.gallery .img .footer {
     height: 7px;
@@ -367,6 +403,10 @@ div.gallery .img .footer.blue {
     background-color: #68697e;
 }
 
+/* -------------------------------------------------------------------------
+ * Gallery: Image Info
+ * ------------------------------------------------------------------------- */
+
 div.gallery .img .info {
     float: right;
     height: 32px;
@@ -383,6 +423,10 @@ div.gallery .img .info {
 div.gallery .img .info {
     cursor: pointer;
 }
+
+/* -------------------------------------------------------------------------
+ * Gallery: Image Rating
+ * ------------------------------------------------------------------------- */
 
 div.gallery .img .rating {
     float: left;
@@ -418,7 +462,7 @@ div.gallery .img .rating .star {
 }
 
 /* -------------------------------------------------------------------------
- * Gallery Spacers
+ * Gallery: Spacers
  * ------------------------------------------------------------------------- */
 
 div.gallery-h-spacer {
@@ -443,7 +487,7 @@ div.gallery-v-spacer.last {
 }
 
 /* -------------------------------------------------------------------------
- * Gallery Top & Bottom Borders
+ * Gallery: Top & Bottom Borders
  * ------------------------------------------------------------------------- */
 
 div.gallery .area {
@@ -475,6 +519,7 @@ div.gallery .imgs {
     border-left: 1px solid white;
     border-right: 1px solid white;
 }
+
 /* -------------------------------------------------------------------------
  * Footer
  * ------------------------------------------------------------------------- */
