--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -55,8 +55,8 @@
     + Top Bar:
     ----------------------------------------------------------------------- -->
 
-    {% block super-top-bar %}<div id="super-top-bar">
-    </div>{% endblock %}
+    {% block super-top-bar %}
+    {% endblock %}
 
     {% block top-bar %}<div id="top-bar">
         <table id="top-bar-tbl">
@@ -105,8 +105,8 @@
         </table>
     </div>{% endblock %}
 
-    {% block sub-top-bar %}<div id="sub-top-bar">
-    </div>{% endblock %}
+    {% block sub-top-bar %}
+    {% endblock %}
 
     <!-- ----------------------------------------------------------------------
     + Content:
@@ -119,14 +119,14 @@
     + Bottom Bar:
     ----------------------------------------------------------------------- -->
 
-    {% block super-bottom-bar %}<div id="super-bottom-bar">
-    </div>{% endblock %}
+    {% block super-bottom-bar %}
+    {% endblock %}
 
     {% block bottom-bar %}<div id="bottom-bar">
     </div>{% endblock %}
 
-    {% block sub-bottom-bar %}<div id="sub-bottom-bar">
-    </div>{% endblock %}
+    {% block sub-bottom-bar %}
+    {% endblock %}
 
     <!-- ----------------------------------------------------------------------
     + Footer:
